--- a/tmux.conf
+++ b/tmux.conf
@@ -27,6 +27,7 @@ set -g @themepack 'powerline/default/cyan'
 # plugins settings
 set -g @continuum-restore 'on'
 set -g @resurrect-strategy-nvim 'session'
+set -g @override_copy_command 'xsel -ib'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
