--- a/tmux.conf
+++ b/tmux.conf
@@ -17,17 +17,32 @@ set -g mouse on
 
 # List of plugins
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'jimeh/tmux-themepack'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tpm'
-set -g @themepack 'powerline/default/cyan'
 
 # plugins settings
 set -g @continuum-restore 'on'
 set -g @override_copy_command 'xsel -ib'
 set -g @resurrect-strategy-nvim 'session'
+
+# catpuccing settings
+set -g @catppuccin_window_status_style "rounded"
+set -g @catppuccin_window_number_position "right"
+set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_default_text "#W"
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#W"
+set -g @catppuccin_status_left_separator  " "
+set -g @catppuccin_status_right_separator ""
+set -g @catppuccin_status_fill "icon"
+set -g @catppuccin_status_connect_separator "no"
+run '~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux'
+set -g  status-left ""
+set -g  status-right "#{E:@catppuccin_status_user}"
+set -ag status-right "#{E:@catppuccin_status_host}"
+set -ag status-right "#{E:@catppuccin_status_session}"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
