--- a/tmux.conf
+++ b/tmux.conf
@@ -38,11 +38,12 @@ set -g @catppuccin_status_left_separator  " "
 set -g @catppuccin_status_right_separator ""
 set -g @catppuccin_status_fill "icon"
 set -g @catppuccin_status_connect_separator "no"
+set -g @catppuccin_date_time_text "%H:%M:%S"
 run '~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux'
 set -g  status-left ""
-set -g  status-right "#{E:@catppuccin_status_user}"
-set -ag status-right "#{E:@catppuccin_status_host}"
-set -ag status-right "#{E:@catppuccin_status_session}"
+set -g  status-right "#{E:@catppuccin_status_host}"
+set -ag status-right "#{E:@catppuccin_status_user}"
+set -ag status-right "#{E:@catppuccin_status_date_time}"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
