--- a/tmux.conf
+++ b/tmux.conf
@@ -29,20 +29,16 @@ set -g @resurrect-strategy-nvim 'session'
 
 # catpuccing settings
 set -g @catppuccin_window_status_style "rounded"
-set -g @catppuccin_window_number_position "right"
-set -g @catppuccin_window_default_fill "number"
 set -g @catppuccin_window_default_text "#W"
-set -g @catppuccin_window_current_fill "number"
 set -g @catppuccin_window_current_text "#W"
 set -g @catppuccin_status_left_separator  " "
-set -g @catppuccin_status_right_separator ""
-set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_connect_separator "no"
-set -g @catppuccin_date_time_text "%H:%M:%S"
+# set -g @catppuccin_status_right_separator ""
+set -g @catppuccin_status_fill "all"
+set -g @catppuccin_status_connect_separator "yes"
+set -g @catppuccin_date_time_text "%H:%M"
 run '~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux'
 set -g  status-left ""
-set -g  status-right "#{E:@catppuccin_status_host}"
-set -ag status-right "#{E:@catppuccin_status_user}"
+set -g status-right "#{E:@catppuccin_status_host}"
 set -ag status-right "#{E:@catppuccin_status_date_time}"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
