--- a/tmux.conf
+++ b/tmux.conf
@@ -7,6 +7,9 @@ bind -r 'k' 'resize-pane -U 1'
 bind -r 'l' 'resize-pane -R 1'
 bind 'm' 'resize-pane -Z'
 
+# update status bar frequently
+set -g status-interval 1
+
 # copy-paste bindings
 set-window-option -g mode-keys vi
 bind 'P' 'paste-buffer'
