--- a/tmux.conf
+++ b/tmux.conf
@@ -20,6 +20,8 @@ set -g mouse on
 
 # List of plugins
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-yank'
@@ -38,13 +40,14 @@ set -g @catppuccin_status_left_separator  ""
 set -g @catppuccin_status_fill "icon"
 set -g @catppuccin_status_connect_separator "yes"
 set -g @catppuccin_date_time_text "%H:%M:%S"
-run '~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux'
-set -g  status-left ""
-set -g  status-right "#{E:@catppuccin_status_user}"
-set -ag status-right "#{E:@catppuccin_status_host}"
-set -ag status-right "#{E:@catppuccin_status_session}"
-set -ag status-right "#{E:@catppuccin_status_date_time}"
-set -g  status-right-length 150
+run "~/.config/tmux/plugins/tmux/catppuccin.tmux"
+set -g      status-left ""
+set -g      status-right "#{E:@catppuccin_status_user}"
+set -ag     status-right "#{E:@catppuccin_status_host}"
+set -ag     status-right "#{E:@catppuccin_status_session}"
+set -ag     status-right "#{E:@catppuccin_status_date_time}"
+set -agF    status-right "#{E:@catppuccin_status_battery}"
+set -g      status-right-length 300
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.config/tmux/plugins/tpm/tpm'
+run "~/.config/tmux/plugins/tpm/tpm"
