moved status sections

--- a/tmux.conf
+++ b/tmux.conf
@@ -42,9 +42,9 @@ set -g @catppuccin_status_connect_separator "yes"
 set -g @catppuccin_date_time_text "%H:%M:%S"
 run "~/.config/tmux/plugins/tmux/catppuccin.tmux"
 set -g      status-left ""
-set -g      status-right "#{E:@catppuccin_status_user}"
+set -g      status-right "#{E:@catppuccin_status_session}"
+set -ag     status-right "#{E:@catppuccin_status_user}"
 set -ag     status-right "#{E:@catppuccin_status_host}"
-set -ag     status-right "#{E:@catppuccin_status_session}"
 set -ag     status-right "#{E:@catppuccin_status_date_time}"
 set -g      status-right-length 300
 
